@@ -1087,6 +1087,17 @@ examples/ostest
       Specifies the number of threads to create in the barrier
       test.  The default is 8 but a smaller number may be needed on
       systems without sufficient memory to start so many threads.
+  * CONFIG_EXAMPLES_OSTEST_RR_RANGE
+      During round-robin scheduling test two threads are created. Each of the threads
+      searches for prime numbers in the configurable range, doing that configurable
+      number of times.
+      This value specifies the end of search range and together with number of runs
+      allows to configure the length of this test - it should last at least a few
+      tens of seconds. Allowed values [1; 32767], default 10000
+  * CONFIG_EXAMPLES_OSTEST_RR_RUNS
+      During round-robin scheduling test two threads are created. Each of the threads
+      searches for prime numbers in the configurable range, doing that configurable
+      number of times.
 
 examples/pashello
 ^^^^^^^^^^^^^^^^^
